# sls

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  user_partitions_singleapp_large.csv
azure-functions/EventRouter/: EventRouteFunction.cs  EventRouter.sln
cmake/: FindFreeRTOS.cmake  FindFreeRTOSPlus.cmake  FindLWIP.cmake
components/azure-iot-esp32/: CMakeLists.txt  transport_tls_esp32.c
components/azure-iot-middleware-freertos/: CMakeLists.txt
components/azure-sdk-for-c/: CMakeLists.txt
components/coreHTTP/: CMakeLists.txt
components/coreMQTT/: CMakeLists.txt
config/: azure_iot_config.h  core_mqtt_config.h
main/: CMakeLists.txt  app_main.cpp  app_main.h  cancellationtoken.cpp  cancellationtoken.h  cancellationtokensource.cpp  cancellationtokensource.h  config.h  defs.h  snippets.txt  task.cpp  task.h
main/audio/data/: audio_data_beep.h  audio_data_closed.h  audio_data_enrolled.h  audio_data_enrollment_failed.h  audio_data_opened.h  audio_data_repeat_again.h  audio_data_siren.h  metadata.cpp  metadata.h
main/azure/: certs.h  defs.h  dev_provisioning.cpp  dev_provisioning.h  iot_hub_action.cpp  iot_hub_action.h  iot_hub_provisioning.cpp  iot_hub_provisioning.h  network_helper.cpp  network_helper.h
main/fingerprint/: defs.h  helper.cpp  helper.h  reader.cpp  reader.h
main/helper/: nvs.cpp  nvs.h  system.cpp  system.h  uart.cpp  uart.h
main/misc/: pwm_audio.c  pwm_audio.h
main/modules/: i2s_controller.cpp  i2s_controller.h  keypad.cpp  keypad.h
main/ulp/: config.h  main.c
main/wifi/: defs.h  provisioning.h  station.cpp  station.h
(+7 files in other folders)
